# savvy-backend

./: .coveragerc  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
app/: dependencies.py  main.py
app/cmd/: init_data.py  init_db.py
app/core/: __init__.py  dependencies.py  exc.py  log.py  sec.py
app/core/config/: default.toml  settings.py
app/core/db/: postgres.py
app/models/: __init__.py  base.py  category.py  record.py  user.py
app/repositories/: base_repository.py  category_repository.py  record_repository.py  user_repository.py
app/routers/v1/: __init__.py  auth_router.py  category_router.py  record_router.py  user_router.py
app/schemas/: category_schemas.py  custom_types.py  record_schemas.py  user_schemas.py
app/services/: category_service.py  record_service.py  user_service.py
app/utils/: functions.py
docker/postgres/: Dockerfile  init.sh
migrations/: env.py
migrations/versions/: 032eda579fb7_create_user_table.py  6d896860c8fd_create_records_and_categories_tables.py  8935d3e46bde_set_description_field_not_nullable.py  9ab7f7971e40_add_categories_count_to_user_table.py  d425adc69fc1_datetime_with_timezone_fix.py
tests/: conftest.py
tests/v1/test_models/: test_user_model.py
tests/v1/test_routes/: test_category_routes.py  test_record_routes.py  test_token_routes.py  test_user_routes.py
tests/v1/test_security/: test_security_dependencies.py  test_security_service.py
tests/v1/test_services/: test_category_service.py  test_record_service.py  test_user_service.py
