[tool.poetry]
name = "savvy"
version = "0.1.0"
description = "Finance Management App"
authors = ["André Lopes <andrelopes.code@gmail.com>"]
readme = "docs/README.md"
packages = [
    { include = "app" },
]
include = ["app/**/*"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
loguru = "^0.7.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
dynaconf = "^3.2.5"
alembic = "^1.13.1"
argon2-cffi = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
